--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
+    "react-dnd": "^2.6.0",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "storm-react-diagrams": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
